# adaptiveiv

./: .gitignore  LICENSE  README.md  mkdocs.yml  package_dev.py  plan.md  pyproject.toml
docs/: api.md  index.md  inference.md  limitations.md
docs/superpowers/plans/: 2026-06-18-adaptiveiv-rebuild.md  2026-06-18-replication-validation.md  2026-06-22-inference-implementation.md
examples/: Development.py  __init__.py  dev-2.0.py  dev-2.5.py  dev-classes.py  dev-main.py  dev.py  simulation_example.py
simulations/: aggregate_paper_table_chunks.py  audit_pooled_error_conventions.py  audit_pooled_rng_conventions.py  audit_release_readiness.py  diagnose_pooled_mse_targets.py  diagnose_pooled_tail_seeds.py  diagnose_pooled_tail_splice.py  reconstruct_paper_table_seeds.py  validate_inference.py  validate_paper_tables.py  validate_replication.py
specs/: backlog.md  log.md
specs/2026-06-18-repeated-splits/: plan.md  requirements.md  validation.md
specs/2026-06-18-replication-validation/: decisions.md  plan.md  requirements.md  scratch.md  validation.md
specs/2026-06-22-inference-design/: decisions.md  design.md  plan.md  requirements.md  validation.md
specs/2026-06-23-inference-diagnostics/: plan.md  requirements.md  validation.md
specs/2026-06-23-inference-ecosystem-api/: plan.md  requirements.md  validation.md
specs/2026-06-23-inference-implementation-hardening/: plan.md  requirements.md  validation.md
specs/2026-06-23-inference-request-gating/: plan.md  requirements.md  validation.md
specs/2026-06-23-paper-table-validation/: plan.md  requirements.md  validation.md
specs/2026-06-23-public-release-metadata/: plan.md  requirements.md  validation.md
specs/2026-06-23-release-readiness-audit/: plan.md  requirements.md  validation.md
specs/2026-06-24-inference-support-contract/: plan.md  requirements.md  validation.md
specs/2026-06-24-liml-int-benchmark/: plan.md  requirements.md  validation.md
specs/2026-06-24-liml-paper-targets/: plan.md  requirements.md  validation.md
specs/2026-06-24-observation-seed-reconstruction/: plan.md  requirements.md  validation.md
specs/2026-06-24-paper-method-coverage/: plan.md  requirements.md  validation.md
specs/2026-06-24-pooled-error-convention-audit/: plan.md  requirements.md  validation.md
specs/2026-06-24-pooled-mse-tail-targets/: plan.md  requirements.md  validation.md
specs/2026-06-24-pooled-rng-convention-audit/: plan.md  requirements.md  validation.md
specs/2026-06-24-pooled-tail-splice/: plan.md  requirements.md  validation.md
specs/2026-06-24-release-evidence-audit/: plan.md  requirements.md  validation.md
specs/2026-06-24-release-scope-replication-limits/: plan.md  requirements.md  validation.md
src/adaptiveiv/: __init__.py  adaptive_iv.py  base.py  data_manager.py  estimators.py  formula.py  model.py  paper_benchmarks.py  results.py  simulation.py  split_select_estimator.py  validation.py
src/adaptiveiv/core/: __init__.py  data_manager.py  split_sample_select_and_interact.py
src/adaptiveiv/estimators/: adaptive_iv.py
tests/: conftest.py  test_data_manager.py  test_docs_examples.py  test_estimators.py  test_formula_api.py  test_model_results_api.py  test_packaging.py  test_release_readiness.py  test_replication_validation.py  test_simulation_validation.py
validation/: README.md
