[project]
name = "adaptiveiv"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "J-R-Paul", email = "73599839+J-R-Paul@users.noreply.github.com" }
]
requires-python = ">=3.12"
dependencies = [
    "matplotlib>=3.10.0",
    "numpy>=2.2.2",
    "scikit-learn>=1.6.1",
    "scipy>=1.15.1",
    "statsmodels>=0.14.4",
    "tqdm>=4.67.1",
]


[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "adaptiveiv",
    "ipykernel>=6.29.5",
    "jupyter>=1.1.1",
    "pytest>=8.3.4",
]

[tool.uv.sources]
adaptiveiv = { workspace = true }


