[project]
name = "adaptiveiv"
version = "0.1.0"
description = "Adaptive split-sample select-and-interact IV estimators for first-stage heterogeneity."
readme = "README.md"
license = "MIT"
authors = [
    { name = "J-R-Paul", email = "73599839+J-R-Paul@users.noreply.github.com" }
]
requires-python = ">=3.10"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Information Analysis",
]
dependencies = [
    "numpy>=1.20",
    "pandas>=1.3",
    "statsmodels>=0.13",
    "patsy>=0.5",
]

[project.optional-dependencies]
docs = [
    "mkdocs>=1.6",
    "mkdocs-material>=9.5",
]
examples = [
    "linearmodels>=6",
    "matplotlib>=3.8",
]

[dependency-groups]
dev = [
    "pytest>=8",
    "ruff>=0.8",
    "mypy>=1.13",
]
docs = [
    "mkdocs>=1.6",
    "mkdocs-material>=9.5",
]
examples = [
    "linearmodels>=6",
    "matplotlib>=3.8",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/adaptiveiv"]

[tool.hatch.build.targets.sdist]
include = [
    "src/adaptiveiv",
    "README.md",
    "LICENSE",
    "pyproject.toml",
    "mkdocs.yml",
    "docs/*.md",
    "examples",
    "simulations",
    "validation/README.md",
]
exclude = [
    ".venv",
    "dist",
    "specs",
    "validation/outputs",
    "**/__pycache__",
    "**/.DS_Store",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
line-length = 88
src = ["src", "tests"]

[tool.mypy]
python_version = "3.10"
ignore_missing_imports = true
